welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:2: error: not found: value nbDePas
 nbDePas=0
 ^Methods:5: error: not found: value nbDePas
    nbDePas=nbDePas+1;
    ^Methods:7: error: not found: value nbDePas
  while (nbDePas!=0){
         ^Methods:9: error: not found: value nbDePas
    nbDePas=nbDePas-1;
    ^