welcome.lessons.welcome.methods.basics.Methods.scala.code
def goAndGet() {
 nbDePas=0
  while (estSurBiscuit()!=true){
    avance();
    nbDePas=nbDePas+1;
  }
  while (nbDePas!=0){
    recule();
    nbDePas=nbDePas-1;
  }
}

for (i <- 1 to 7) {
    goAndGet();
    right();
    forward();
    left();
}